<resources>
    <string name="app_name">DiplomaApplication</string>
    <string name="web_client_id">949341414904-qgv08qjm0fs6bod7fpiou63lo07mg3qb.apps.googleusercontent.com</string>
    <string name="google_maps_key">AIzaSyAEkbsprYryRT_Kpb3m0cdGada5kmR2m8o</string>
    <string name="menu_home">Главная</string>
    <string name="title_activity_main_page">Главная</string>
    <string name="title_home">Главная</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Уведомление</string>
    <string name="title_profile">Профиль</string>
    <string name="title_chats">Чат</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="medicines">Medicines</string>
    <string name="doctors">Doctors</string>
    <string name="profile">Profile</string>
    <string name="email_adress">Электронная почта</string>
    <string name="full_name">Имя</string>
    <string name="password">Пароль</string>
    <string name="are_you">Вы?</string>
    <string name="journal">Запись</string>
    <string name="write_a_reply">Ответить...</string>
    <string name="choose_your_work_interval">Выберите время работы</string>
    <string name="new_name">Новое имя</string>
    <string name="new_bio">Новой био</string>
    <string name="new_passsword">Новый пароль</string>
    <string name="old_passsword">Старый пароль</string>
    <string name="new_mb">Медицинское направление</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="login">Войти</string>
    <string name="confirmPass">Подтвердите пароль</string>
    <string name="register">Зарегестрироваться</string>
    <string name="sign_in">Войти</string>
    <string name="add_pills">Добавить лекарство</string>
    <string name="pills_name">Название лекарство</string>
    <string name="amount">Количество</string>
    <string name="time">Время</string>
    <string name="pills">таблетки</string>
    <string name="duration">Продолжительность</string>
    <string name="medicine_form">Вид лекарство</string>
    <string name="_3_weeks">3 недели</string>
    <string name="start_date">Дата начала</string>
    <string name="add">Добавить</string>
    <string name="change_name">Изменить имя</string>
    <string name="change_bio">Изменить био</string>
    <string name="change_avatar">Изменить аватар</string>
    <string name="change_medicine_branch">Сменить направление медицины</string>
    <string name="change_password">Изменить пароль</string>
    <string name="log_out">Выйти</string>
    <string name="save">Сохранить</string>
    <string name="sources">Источники</string>
    <string name="message">Написать</string>
    <string name="waiting_for_doctor">Ждем ответа от врача...</string>
    <string name="work_time">Изменить время работы</string>
    <string name="change_workTime">Изменить время</string>
    <string name="click_to_add_your_first_medicine">Нажмите «+», чтобы добавить свое первое лекарство.</string>
    <string name="doctor">Врач</string>
    <string name="patient">Пациент</string>
    <string name="click_for_choose">Нажмите чтобы выбрать</string>
    <string name="show_statistics">!</string>
    <string name="clear_medicine">Очистить лекарства</string>
    <string name="day">День</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>
    <string name="map">Карта</string>
    <string name="search_place">Найти место</string>
    <string name="intake_timing">Время потребление</string>
    <string name="custom_description_hint">Описание</string>
    <string name="title_chat">Чат</string>
    <string name="title_statistics">Статистика</string>
    <string name="title_add_medicines">Добавить лекарство</string>
    <string name="title_map">Карта</string>
    <string name="title_settings">Настройка</string>
    <string name="water">Вода</string>
    <string name="title_water">Вода</string>
    <string name="water_drinked_today">Выпито воды</string>
    <string name="water_goal">Цель выпить:</string>
    <string name="water_recommend">Рекомендуемое количество:</string>
    <string name="water_drink_remaining">Осталось выпить:</string>
    <string name="prescribe_medicine">+</string>
    <string name="medicine_name">Название лекарство</string>
    <string name="quantity">Доза</string>
    <string name="permission_denied_text">Для работы этого приложения требуются разрешения %s. Вы можете изменить разрешения в настройках приложения.</string>
    <string name="location">локации</string>
    <string name="open_app_settings_button">Открыть настройки</string>
    <string name="choose_img">Сделайте снимок или выберите фото из галереи</string>
    <string name="copy_text">Скопировать текст</string>
    <string name="change_info">Личные данные</string>
    <string name="title_info">Личные данные</string>

    <plurals name="numberOfSongsAvailable">
        <item quantity="one">%d неделя</item>
        <item quantity="other">%d недели</item>
    </plurals>

</resources>