<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.medicines.MedicinesFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F7F7F7"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:gravity="center"
                    android:text="@string/journal"
                    android:textColor="@color/blue"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <Button
                    android:id="@+id/showStatisticsButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/circle_border_blue"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:text="@string/show_statistics"
                    android:clickable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>





            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calendarRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:layout_marginTop="40dp"
                android:paddingBottom="40dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/medicinesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:paddingBottom="40dp" />

            <TextView
                android:id="@+id/addFirstMedicineText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/click_to_add_your_first_medicine"
                android:textSize="24sp"
                android:fontFamily="@font/open_sans_regular"
                android:visibility="gone"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:textAlignment="center"
                android:layout_marginTop="40dp"
                android:textColor="@color/darkGray"/>



        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addMedicineButton"
        android:layout_width="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:src="@drawable/ic_add"
        android:backgroundTint="@color/blue"
        android:tint="@color/white" />
</FrameLayout>